Fixed shifting menu border

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6000,10 +6000,7 @@ body {
 @media (min-width: 768px) {
   .navbar-default .navbar-nav > li > a {
     display: block;
-  }
-  .navbar-default .navbar-nav > li > a:hover,
-  .navbar-default .navbar-nav > li > a:focus {
-    border-bottom: 5px solid rgba(231, 231, 231, 0.95);
+    border-bottom: 5px solid transparent;
   }
   .navbar-default .navbar-nav > li > a:focus {
     background: transparent;
@@ -6012,7 +6009,7 @@ body {
   .navbar-default .navbar-nav > .active > a:hover,
   .navbar-default .navbar-nav > .active > a:focus {
     background: transparent;
-    border-bottom: 5px solid #ff2d00;
+    border-bottom-color: #ff2d00;
   }
 }
 .navbar-brand {
